<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
    <TextView 
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="18sp"
        android:text="@string/textaccount"/> 
        
    <EditText 
        android:id="@+id/account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:hint="@string/accounthint"/>    
    </LinearLayout>
    
     <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
    <TextView 
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="18sp"
        android:text="@string/textpsd"/> 
        
    <EditText 
        android:id="@+id/psd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:hint="@string/psdhint"/>    
    </LinearLayout>
    
     <LinearLayout 
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         
        <CheckBox 
            android:id="@+id/remember_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/> 
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/editrem"/>
         
         
         
     </LinearLayout>
     
     <Button 
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="@string/login"/>
    

</LinearLayout>
